fix spacing

--- a/src/components/About/AboutSection.css
+++ b/src/components/About/AboutSection.css
@@ -1,7 +1,6 @@
 #about{
     background-color:  transparent;
     margin:2em;
-    margin-top:15em;
     border-radius:0.5em;
 }
 
@@ -30,9 +29,9 @@ img{
 }
 
 .about-stuff{
-    margin-top:5em;
+    padding-top:8%;
     position:relative;
-    margin-bottom:20em;
+    padding-bottom:15%;
 }
 
 
@@ -183,6 +182,7 @@ img{
 #about-img{
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+
 }
 
 
